# model_predictive_control

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yaml
00 - Functions/complete optimization/: mpc_block.slx  qp_matrices.m  qp_matrices_TEMP.m
00 - Functions/curvilinear_functions/: wrap.m
00 - Functions/utils/: circle.m
00 - Functions/yalmip optimization/: adaptive_mpc.m
01 - MPC LTI - point mass/: main_01.m  mpc_v0_1.slx  reference.mat  x.mat
01 - MPC LTI - point mass/functions/: mpc_design.m  point_lin_kin.m  waypoint_design.m
01 - Theory/: 01 - MPC.docx  TEMP.docx
02 - Adaptive LS MPC - bicycle/: main_mpc_02.m  mpc_02_sim.slx
02 - Adaptive LS MPC - bicycle/data/: reference_TEMP.mat
02 - Adaptive LS MPC - bicycle/functions/: bicycle_sl_position_model.m  plot_reference.m
02 - Propaedeutic MPC/: MPC implementation.docx
02 - Propaedeutic MPC/01 - State tracking MPC/: main.m  mpc_design.m  mpc_tracking_state.slx
02 - Propaedeutic MPC/TEMP/: MPC implementation [backup].docx
02 - Propaedeutic MPC/TEMP/01 - State regulator/: main.m  mpc_mtx_fun.m  mpc_regulator.slx
02 - Propaedeutic MPC/TEMP/02 - Tracking output/: main.m  mpc_tracking.slx
02 - Propaedeutic MPC/TEMP/03 - Tracking output with control horizon/: main.m  mpc_control_horizon.slx
03 - Implementation/TEMP/: MPC.docx
03 - Implementation/TEMP/01 - MPC v1 - trajectory generator/: main.m  mpc_v1.slx
03 - Implementation/TEMP/02 - MPC v2 - trajectory generation with obstacle avoidance/: main.m  mpc_v2.slx
03 - Implementation/TEMP/03 - MPC v3 - trajectory generation with obstacle avoidance - bicycle/: main.m  mpc_mtx_fun.m  mpc_v3_1.slx  obs_map_fun.m
04 - Learning MPC LTI/: main_lmpc_lti.m
04 - Learning MPC LTI/functions/: inf_opt_prob.m  linear_lmpc.m  linear_mpc.m
Adaptive MPC in Curvilinear reference frame/TEMP/: Adaptive MPC in curvilinear reference.tex
Adaptive MPC in Curvilinear reference frame/TEMP/matlab - yalmpi - Adaptive LMPC/: main.m
Adaptive MPC in Curvilinear reference frame/TEMP/matlab - yalmpi - Adaptive LMPC/mpc_functions/: adaptive_mpc.m  bicycle_pred_model_II.m  bicycle_pred_model_III.m
Adaptive MPC in Curvilinear reference frame/TEMP/matlab - yalmpi - Adaptive LMPC/utils/: arrow.m
Adaptive MPC in Curvilinear reference frame/TEMP/matlab - yalmpi - Adaptive MPC/plant/: bicycle_plant_continuous.m
Adaptive MPC in Curvilinear reference frame/TEMP/matlab - yalmpi - Adaptive MPC/utils/: arc_center_and_edges.m
Adaptive MPC in Curvilinear reference frame/TEMP/results/results 2/: mpc_data.mat
Adaptive MPC in Curvilinear reference frame/TEMP/results/results 3/: mpc_data.mat
Adaptive MPC in Curvilinear reference frame/matlab - Adaptive LMPC/curvilinear_functions/: computeAngle.m
Adaptive MPC in Curvilinear reference frame/matlab - Adaptive LMPC/mpc_functions/: adaptive_mpc.m  select_local_SS.m
Adaptive MPC in Curvilinear reference frame/matlab - Adaptive LMPC/utils/: derivatives.m
Adaptive MPC in Curvilinear reference frame/matlab - Adaptive MPC v2 (state variation)/: main.m
Adaptive MPC in Curvilinear reference frame/matlab - Adaptive MPC/mpc_functions/: adaptive_mpc.m  qp_matrices.m
Adaptive MPC in Curvilinear reference frame/matlab - Adaptive MPC/plant/: bicycle_plant_discrete.m
Adaptive MPC in Curvilinear reference frame/matlab - test/: jacobian_matrices.m
LMPC TEMP/LMPC - v1.0 - SimpleExample/: main.m  obs_avoidance.m
LMPC TEMP/LMPC - v1.0 - SimpleExample/data/: LMPC_Example_2_N_4.mat
LMPC TEMP/LMPC - v1.0 - SimpleExample/utils/: FTOCP.m  LMPC.m  computeInvariantGoalSet.m  solve_CFTOCP_goalSet.m
LMPC TEMP/LMPC - v1.1 - (Simple Example)/: main_lmpc_v1_1.m
LMPC TEMP/LMPC - v1.1 - (Simple Example)/functions/: fin_opt_prob.m
STASH/: CMakeLists.txt  package.xml
STASH/Adaptive MPC in Curvilinear reference frame/TEMP/: Adaptive MPC in curvilinear reference.aux
STASH/Adaptive MPC in Curvilinear reference frame/TEMP/matlab - yalmpi - Adaptive LMPC/: test.m
STASH/Adaptive MPC in Curvilinear reference frame/TEMP/matlab - yalmpi - Adaptive MPC/: main.m  main_2.m
STASH/Adaptive MPC in Curvilinear reference frame/TEMP/pictures/: pictures.docx
STASH/Adaptive MPC in Curvilinear reference frame/matlab - Adaptive LMPC/: main.m  trajectory.mat
STASH/Adaptive MPC in Curvilinear reference frame/matlab - Adaptive LMPC/curvilinear_functions/: track_fun.m
STASH/Adaptive MPC in Curvilinear reference frame/matlab - Adaptive LMPC/mpc_functions/: bicycle_pred_model.m  cost_to_go.m  qp_matrices.m  yalmip_mpc.m
STASH/Adaptive MPC in Curvilinear reference frame/matlab - Adaptive MPC/: evolution.m  main.m  trajectory.mat
STASH/Adaptive MPC in Curvilinear reference frame/matlab - Adaptive MPC v2 (state variation)/curvilinear_functions/: track_fun.m
STASH/Adaptive MPC in Curvilinear reference frame/matlab - test/: bicycle_pred_model_jacobian.m  derivatives_continuous.m  derivatives_discrete.m
STASH/LMPC TEMP/LMPC - v1.0 - SimpleExample/: obs_design.m
STASH/LMPC TEMP/LMPC - v1.0 - SimpleExample/data/: feasible_solution.mat
STASH/LMPC TEMP/Presentation/: LMPC.tex
STASH/curvilinear_functions/: track_fun.m
STASH/functions/: mpc_design.m  plot_trajectory.m
STASH/src/: dummy_model.py  linear_mpc_cvx_TEMP.py  lti_mpc.py  main.py  mpc_dataclass.py  qp_optimization.py  system_discretization.py  system_prediction.py  utils.py
STASH/src/TEMP/: main.m  mpc_matrix.m  test.py
STASH/src/test/: env_fixtures.py  test_lti_mpc.py  test_qp_optimization.py  test_system_discretization.py
STASH/system_models/: bicycle_plant.m
docker/: Dockerfile  Dockerfile_ros2
model_predictive_control/: test.bash
model_predictive_control/src/iterative_learning_mpc/: CMakeLists.txt  package.xml
model_predictive_control/src/linear_mpc/: CMakeLists.txt  package.xml
model_predictive_control/src/linear_time_varying_mpc/: CMakeLists.txt  package.xml
model_predictive_control/src/nonlinear_mpc/: CMakeLists.txt  package.xml
model_predictive_control/src/utils/: CMakeLists.txt  package.xml
model_predictive_control/src/utils/tests/: test_data_structure.cpp
(+27 files in other folders)
